--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,17 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".PlayerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.CricBoard_Application2"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:configChanges="orientation"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/Theme.CricBoard_Application2" />
+            android:theme="@style/Theme.CricBoard_Application2"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation"
