--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,20 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".OpeningPlayerActivity"
+            android:name=".PlayerStatActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.CricBoard_Application2"
             android:exported="false" />
+        <activity
+            android:name=".ScoreboardActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.CricBoard_Application2" />
+        <activity
+            android:name=".OpeningPlayerActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.CricBoard_Application2" />
         <activity
             android:name=".NewBowlerActivity"
             android:exported="false"
