--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".TargetActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.CricBoard_Application3"
+            android:exported="false" />
+        <activity
             android:name=".ScoreSummaryActivity"
             android:exported="false"
             android:screenOrientation="portrait"
